# kemoticons

./: .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5EmoticonsConfig.cmake.in  README.md  kemoticons.categories  metainfo.yaml
autotests/: CMakeLists.txt  autotestbase.h  kemoticontest.cpp  kemoticontest.h  ktexttohtmlplugintest.cpp
autotests/default-testtheme/: emoticons.xml
autotests/emoticon-parser-testcases/: xmpp-1.input  xmpp-1.output
autotests/xmpp-testtheme/: icondef.xml
docs/: Doxyfile.local
src/: CMakeLists.txt
src/core/: CMakeLists.txt  kemoticons.cpp  kemoticons.h  kemoticonsglobal.cpp  kemoticonsglobal_p.h  kemoticonsprovider.cpp  kemoticonsprovider.h  kemoticonstheme.cpp  kemoticonstheme.h
src/integrationplugin/: CMakeLists.txt  kemoticonsintegrationplugin.cpp  kemoticonsintegrationplugin.h  ktexttohtml.cpp  ktexttohtml.h
src/providers/adium/: CMakeLists.txt  adium_emoticons.cpp  adium_emoticons.h  emoticonstheme_adium.desktop  emoticonstheme_adium.json
src/providers/kde/: CMakeLists.txt  emoticonstheme_kde.desktop  emoticonstheme_kde.json  kde_emoticons.cpp  kde_emoticons.h
src/providers/pidgin/: CMakeLists.txt  emoticonstheme_pidgin.desktop  emoticonstheme_pidgin.json  pidgin_emoticons.cpp  pidgin_emoticons.h
src/providers/xmpp/: CMakeLists.txt  emoticonstheme_xmpp.desktop  emoticonstheme_xmpp.json  xmpp_emoticons.cpp  xmpp_emoticons.h
tests/: CMakeLists.txt  main.cpp
themes/: CMakeLists.txt  theme-license-readme.txt
themes/Breeze/: emoticons.xml
themes/EmojiOne/: _emoji_mappings.txt
themes/Glass/: emoticons.xml
themes/Konqi/: blue-heart.svgz  double-heart.svgz  drink-beer.svgz  drink-martini.svgz  face-angel.svgz  face-angry.svgz  face-clown.svgz  face-confused.svgz  face-cool.svgz  face-crying.svgz  face-devilish.svgz  face-fearful.svgz  face-in-love.svgz  face-kiss.svgz  face-laughing.svgz  face-ninja.svgz  face-pirate.svgz  face-plain.svgz  face-quiet.svgz  face-sad.svgz  face-sleeping.svgz  face-smile-big.svgz  face-smile.svgz  face-surprise.svgz  face-wink.svgz  face-yawn.svgz  food-cake.svgz  red-heart.svgz  shine-heart.svgz  yellow-heart.svgz
